Update Java 21 and fix OCR App